[project]
name = "rabotin-ma-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]
